# mela_backend

./: .gitignore
mela/: create_table.py  pyproject.toml
mela/mela/: main.py  model.py  settings.py  test.py
mela/mela/controller/: database.py  language.py  manuscript.py  paragraph.py  sentence.py  text.py
mela/mela/models/: Author.py  Base.py  Language.py  Manuscript.py  Models.py  Paragraph.py  Sentence.py  Text.py  Translation.py  manuscript.py  translation.py
