[tool.poetry]
name = "mela"
version = "0.1.0"
description = ""
authors = ["tckrishna <tckrishna.eec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = {version = "^7.0.0", extras = ["async"]}
gunicorn = "^20.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
typing-extensions = "^4.4.0"
typer = "^0.7.0"
rich = "^13.1.0"
starlite = "^1.51"
pyscopg2 = "^66.0.2"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.21.0"
alembic = "^1.10.2"
sqlalchemy = "1.4.47"
black = "^23.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
